Fixed scrollbar issues.

--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -1,5 +1,5 @@
 .dataTables_wrapper {
-	overflow: hidden;
+	overflow-x: scroll;
 }
 
 table.dataTable tbody tr.selected {
